--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.dark{
+    background-color: black;
+    color: white;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +44,18 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+
+
+
+
+/* .light-mode {
+  background-color: white !important;
+  color: black;
+}
+
+.dark-mode {
+  background-color: black !important;
+  color: white;
 } */
